# anal_eye

./: .gitignore
test_task/: .dockerignore  .env.example  .gitignore  DECISIONS.md  Dockerfile  ENVIRONMENT.md  README.md  RISK_MANAGEMENT.md  docker-compose.yml  pyproject.toml  requirements.txt
test_task/ae_brain/: __init__.py  __main__.py  api.py  artifact_verify.py  cli.py  config.py  contracts.py  env_universe.py  runtime.py  symbols.py  universe_top200.py
test_task/config/: symbols_universe.yaml  universe_top200_usdtm.json  universe_top200_usdtm.txt
test_task/docker/: entrypoint.sh
test_task/examples/: candidate.json
test_task/scripts/: apply_top200_env.py  diagnose_confidence_ceiling.py  diagnose_generalization_gap.py  diagnose_live_pipeline.py  diagnose_signal_distribution.py  discover_top200_usdtm.py  download_market_data.py  evaluate_candidate.py  prepare_dataset.py  prepare_training_dataset.py  promote_model.py  promote_top200_artifact.py  run_ablation.py  run_backtest.py  run_hyperparameter_sweep.py  run_top200_training.py  search_short_configs.py  search_side_specialists.py  smoke_binance_1h_candidate.py  smoke_rest_fallback_candidate.py  smoke_symbol_safety.py  sweep_top200_side_balance.py  train_multi_asset.py  train_production.py  validate_dataset.py  verify_top200_runtime.py
test_task/tests/: test_binance_1h_candidate.py  test_dataframe_utils.py  test_download_market_data.py  test_dynamic_symbols.py  test_evaluation_promotion.py  test_execution_timing.py  test_labels.py  test_layer1_contracts.py  test_meta_two_stage.py  test_news_features.py  test_news_market_signal.py  test_publish_gate.py  test_publish_skipped.py  test_side_balance.py  test_side_specialists.py  test_side_specialists_evaluation.py  (+7 more)
(+233 files in other folders)
